# aqiv

./: Cargo.toml  README.md  aqiv.desktop
build_scripts/: build_all.sh  build_deb.sh  build_linux.sh  build_macos.sh  build_rpm.sh  build_windows.sh
src/: app.rs  main.rs
src/app/: config.rs  gui.rs  image_loaders.rs  input.rs  misc.rs  state.rs  utils.rs
src/app/image_utils/: mod.rs
src/app/image_utils/image_loaders/: default.rs  fallback.rs  heif.rs  jpegxl.rs  mod.rs  raw.rs  svg.rs
