[package]
name = "aqiv"
version = "1.0.9"
edition = "2024"
authors = ["arabian"]
readme = "README.md"
license = "MIT"
keywords = ["image", "viewer", "png", "jpeg"]
description = "arabian's Quick Image Viewer"
repository = "https://github.com/arabianq/aqiv"
homepage = "https://github.com/arabianq/aqiv"

[dependencies]
egui = { version = "0.31.1", features = ["default"] }
eframe = { version = "0.31.1", features = ["default"] }
egui_extras = { version = "0.31.1", features = ["image", "file", "svg", "gif"] }
egui-notify = { version = "0.19.0" }
image = { version = "0.25.6", features = ["avif", "bmp", "dds", "ff", "gif", "hdr", "ico", "jpeg", "exr", "png", "pnm", "qoi", "tga", "tiff", "webp"] }
screen_size = { version = "0.1" }
clap = { version = "4.5.39", features = ["default", "derive"] }
clipboard-rs = "0.3.0"

[target.'cfg(target_os = "linux")'.dependencies]
wl-clipboard-rs = { version = "0.9.2", features = ["native_lib"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
