[package]
name = "aqiv"
version = "1.1.2"
edition = "2024"
authors = ["arabian"]
readme = "README.md"
license = "MIT"
keywords = ["image", "viewer", "png", "jpeg"]
description = "arabian's Quick Image Viewer"
repository = "https://github.com/arabianq/aqiv"
homepage = "https://aqiv.arabianq.ru"

[dependencies]
egui = { version = "0.32.0", features = ["default"] }
eframe = { version = "0.32.0", features = ["default"] }
egui_extras = { version = "0.32.0", features = ["image", "file", "svg", "gif"] }
egui-notify = { version = "0.20.0" }
egui_material_icons = "0.4.0"
image = { version = "0.25.6", features = ["avif", "bmp", "dds", "ff", "gif", "hdr", "ico", "jpeg", "exr", "png", "pnm", "qoi", "tga", "tiff", "webp"] }
nsvg = "0.5.1"
screen_size = { version = "0.1" }
clap = { version = "4.5.39", features = ["default", "derive"] }
clipboard-rs = "0.3.0"
dirs = "6.0.0"
rfd = "0.15.3"

[target.'cfg(target_os = "linux")'.dependencies]
wl-clipboard-rs = { version = "0.9.2", features = ["native_lib"] }
rfd = { version = "0.15.3", features = ["xdg-portal"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[package.metadata.deb]
assets = [
    { source = "target/release/aqiv", dest = "usr/bin/", mode = "755" },
    { source = "aqiv.desktop", dest = "usr/share/applications/aqiv.desktop", mode = "644" },
]
depends = ["libx11-6", "libgcc-s1", "libc6", "libxcb1", "libxau6"]

[package.metadata.generate-rpm]
assets = [
    { source = "target/x86_64-unknown-linux-gnu/release/aqiv", dest = "/usr/bin/aqiv", mode = "755" },
    { source = "aqiv.desktop", dest = "/usr/share/applications/aqiv.desktop", mode = "644" }
]

[package.metadata.generate-rpm.requires]
libX11 = "*"
libgcc = "*"
glibc = "*"
libxcb = "*"
libXau = "*"

[package.metadata.bundle]
name = "AQIV"
identifier = "ru.arabianq.aqiv"
