[package]
name = "aqiv"
version = "3.0.0"
edition = "2024"
authors = ["arabian"]
readme = "README.md"
license = "MIT"
keywords = ["image", "viewer", "png", "jpeg"]
description = "arabian's Quick Image Viewer"
repository = "https://github.com/arabianq/aqiv"
homepage = "https://aqiv.arabianq.ru"

[dependencies]
egui = { version = "0.32.1", default-features = false, features = ["rayon"] }
eframe = { version = "0.32.1", default-features = false, features = ["glow", "wayland", "x11", "default_fonts"] }
egui_extras = { version = "0.32.1", default-features = false, features = ["image", "file", "svg", "gif"] }
egui-notify = "0.20.0"
egui_material_icons = "0.4.0"

image = { version = "0.25.6", default-features = false, features = ["rayon", "avif", "bmp", "dds", "ff", "gif", "hdr", "ico", "jpeg", "exr", "png", "pnm", "qoi", "tga", "tiff", "webp"] }
magick_rust = "1.1.0"
resvg = { version = "0.45.1", default-features = false, features = ["raster-images"] }
usvg = { version = "0.45.1", default-features = false }
libheif-rs = { version = "2.3.0", default-features = false, features = ["v1_17"] }
jpegxl-rs = { version = "0.11.2", default-features = false, features = ["image"] }

clap = { version = "4.5.46", default-features = false, features = ["derive", "std"] }
dirs = "6.0.0"
rfd = { version = "0.15.4", default-features = false, features = ["xdg-portal", "async-std"] }

screen_size = "0.1.0"
common_macros = "0.1.1"
rayon = "1.11.0"

clipboard-rs = "0.3.0"
wl-clipboard-rs = { version = "0.9.2", default-features = false, features = ["native_lib"] }


[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "unwind"

[package.metadata.deb]
assets = [
    { source = "target/release/aqiv", dest = "usr/bin/", mode = "755" },
    { source = "aqiv.desktop", dest = "usr/share/applications/aqiv.desktop", mode = "644" },
]
depends = ["libx11-6"]

[package.metadata.generate-rpm]
assets = [
    { source = "target/x86_64-unknown-linux-gnu/release/aqiv", dest = "/usr/bin/aqiv", mode = "755" },
    { source = "aqiv.desktop", dest = "/usr/share/applications/aqiv.desktop", mode = "644" }
]

[package.metadata.generate-rpm.requires]
libX11 = "*"

[package.metadata.bundle]
name = "AQIV"
identifier = "ru.arabianq.aqiv"
